--- a/LabSem3/Views/Department/Details.cshtml
+++ b/LabSem3/Views/Department/Details.cshtml
@@ -4,75 +4,118 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Details Department</h2>
 
 <div>
-    <h4>Department</h4>
-    <hr />
+    </br>
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        <div class="panel-body inf-content">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="table-responsive">
+                        <table class="table table-user-information">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-user  text-primary"></span>
+                                            Equipment Name
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Name
+                                    </td>
+                                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-cloud text-primary"></span>
+                                            Location
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Location
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-envelope text-primary"></span>
+                                            Status
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Status
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-bookmark text-primary"></span>
+                                            CreatedAt
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @string.Format("{0:dd/MM/yyyy}", Model.CreatedAt)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-eye-open text-primary"></span>
+                                            UpdatedAt
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @string.Format("{0:dd/MM/yyyy}", Model.UpdatedAt)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-eye-open text-primary"></span>
+                                            DeletedAt
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @string.Format("{0:dd/MM/yyyy}", Model.DeletedAt)
+                                    </td>
+                                </tr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Location)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeletedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Hod.UserName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Hod.UserName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LabId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LabId)
-        </dd>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-eye-open text-primary"></span>
+                                            UserName
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Hod.UserName
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-eye-open text-primary"></span>
+                                            LabId
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.LabId
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                    </td>
+                                    <td class="text-primary">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
     </dl>
 </div>
 <p>
