--- a/LabSem3/Views/Document/Delete.cshtml
+++ b/LabSem3/Views/Document/Delete.cshtml
@@ -44,8 +44,75 @@
         </dd>
 
     </dl>
+    </br>
+    <dl class="dl-horizontal">
+        <div class="panel-body inf-content">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="table-responsive">
+                        <table class="table table-user-information">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-user  text-primary"></span>
+                                            Title
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Title
+                                    </td>
+                                </tr>
 
-    @using (Html.BeginForm()) {
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-cloud text-primary"></span>
+                                            Detail
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Detail
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-envelope text-primary"></span>
+                                            Status
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Status
+                                    </td>
+                                </tr>
+                              
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-envelope text-primary"></span>
+                                            TypeEquipment Name
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Html.DisplayFor(model => model.TypeEquipment.Name)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                    </td>
+                                    <td class="text-primary">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+    </dl>
+
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
